tests/NormalTests/paczka1/fuzzy1/69813494.err
Error in line 2: N0fUCUjk A664 92,5
Error in line 3: N0fUCUjk A805 72,9
Error in line 20: 5IQSf A556 252,7
Error in line 24: OYS A556 30,4
